#168 add swagger doc for nlp api
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tock-bot-admin",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
