--- a/docs-mk/fr/mkdocs.yml
+++ b/docs-mk/fr/mkdocs.yml
@@ -10,7 +10,8 @@ pages:
     - Construire le modèle: construire-le-modele.md
     - Evaluer la pertinence du modèle: evaluer-la-pertinence-du-modele.md
     - L'API NLP: api-nlp.md
-    - Concevoir un bot: concevoir-un-bot.md
+    - Présentation du bot Open Data: presentation-du-bot-open-data.md
+    - Développer un bot: developper-un-bot.md
 theme: 'material'
 theme_dir: 'theme'
 markdown_extensions:
