--- a/translator/core/pom.xml
+++ b/translator/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>0.7.3-SNAPSHOT</version>
+        <version>0.7.3</version>
     </parent>
 
     <artifactId>tock-translator-core</artifactId>
