improve test framework
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/test/pom.xml
+++ b/bot/test/pom.xml
@@ -33,6 +33,16 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>bot-toolkit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
