fixes npm dependencies
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -37,7 +37,8 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.7",
+    "@angular/cli": "1.6.3",
+    "@angular-devkit/schematics": "0.0.42",
     "@angular/compiler-cli": "^4.0.2",
     "@types/filesaver": "0.0.30",
     "@types/jasmine": "2.5.38",
