--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -38,7 +38,8 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.7",
+    "@angular/cli": "1.6.3",
+    "@angular-devkit/schematics": "0.0.42",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
