--- a/bot/test/pom.xml
+++ b/bot/test/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>junit</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.nhaarman</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
