--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-admin</artifactId>
-        <version>0.7.4-SNAPSHOT</version>
+        <version>0.7.4</version>
     </parent>
 
     <artifactId>tock-nlp-admin-server</artifactId>
