[maven-release-plugin] prepare for next development iteration

--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>0.7.4</version>
+        <version>0.7.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-api-service</artifactId>
