#191 first version of alexa connector
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -37,6 +37,7 @@
         <module>connector-messenger</module>
         <module>connector-ga</module>
         <module>connector-slack</module>
+        <module>connector-alexa</module>
         <module>storage-mongo</module>
 
         <module>toolkit</module>
@@ -60,6 +61,11 @@
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
                 <artifactId>tock-bot-connector-ga</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>tock-bot-connector-alexa</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
