--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>0.7.5-SNAPSHOT</version>
+        <version>0.8.0</version>
     </parent>
 
     <artifactId>tock-translator</artifactId>
