--- a/bot/test/pom.xml
+++ b/bot/test/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>mockito-kotlin</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-shared</artifactId>
+            <type>test-jar</type>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
