resolves #172 add the ability to add scripted story handlers in the admin interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/pom.xml
+++ b/bot/admin/pom.xml
@@ -31,6 +31,7 @@
 
     <modules>
         <module>test</module>
+        <module>kotlin-compiler</module>
         <module>server</module>
         <module>web</module>
     </modules>
