--- a/dokka/pom.xml
+++ b/dokka/pom.xml
@@ -100,6 +100,13 @@
                             <urlSuffix>#L</urlSuffix>
                         </link>
                         <link>
+                            <dir>${project.basedir}/../bot/connector-alexa/src/main/kotlin</dir>
+                            <url>
+                                https://github.com/voyages-sncf-technologies/tock/blob/master/bot/connector-alexa/src/main/kotlin
+                            </url>
+                            <urlSuffix>#L</urlSuffix>
+                        </link>
+                        <link>
                             <dir>${project.basedir}/../bot/test/src/main/kotlin</dir>
                             <url>https://github.com/voyages-sncf-technologies/tock/blob/master/bot/test/src/main/kotlin
                             </url>
@@ -115,6 +122,7 @@
                         <dir>${project.basedir}/../bot/connector-ga/src/main/kotlin</dir>
                         <dir>${project.basedir}/../bot/connector-messenger/src/main/kotlin</dir>
                         <dir>${project.basedir}/../bot/connector-slack/src/main/kotlin</dir>
+                        <dir>${project.basedir}/../bot/connector-alexa/src/main/kotlin</dir>
                         <dir>${project.basedir}/../bot/test/src/main/kotlin</dir>
                     </sourceDirectories>
                     <includes>
