--- a/bot/connector-alexa/pom.xml
+++ b/bot/connector-alexa/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>0.8.3-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <artifactId>tock-bot-connector-alexa</artifactId>
