#217 kotlin-compiler: rename sub modules
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/kotlin-compiler/pom.xml
+++ b/bot/admin/kotlin-compiler/pom.xml
@@ -30,10 +30,10 @@
     <description>Tock kotlin compiler</description>
 
     <modules>
-        <module>kotlin-compiler-shared</module>
-        <module>kotlin-compiler-core</module>
-        <module>kotlin-compiler-server</module>
-        <module>kotlin-compiler-client</module>
+        <module>shared</module>
+        <module>core</module>
+        <module>server</module>
+        <module>client</module>
     </modules>
 
     <build>
