--- a/pom.xml
+++ b/pom.xml
@@ -38,15 +38,15 @@
         <kotlin-logging>1.5.3</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.6.2</kmongo>
-        <fongo>2.1.1</fongo>
+        <kmongo>3.6.3</kmongo>
+        <fongo>2.2.0-RC1</fongo>
         <jackson>2.9.3</jackson>
         <jackson-module>2.9.3</jackson-module>
-        <klaxon>2.1.8</klaxon>
+        <klaxon>2.1.13</klaxon>
         <vertx>3.5.1</vertx>
-        <retrofit>2.3.0</retrofit>
+        <retrofit>2.4.0</retrofit>
         <okhttp>3.10.0</okhttp>
-        <guava>24.0-jre</guava>
+        <guava>24.1-jre</guava>
         <google-auth>1.23.0</google-auth>
         <jasypt>1.9.2</jasypt>
         <commons-csv>1.5</commons-csv>
@@ -57,7 +57,7 @@
         <junit>4.12</junit>
         <mockito-kotlin>1.5.0</mockito-kotlin>
 
-        <plugin.surefire>2.20.1</plugin.surefire>
+        <plugin.surefire>2.21.0</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
         <plugin.release>2.5.3</plugin.release>
         <plugin.gpg>1.6</plugin.gpg>
