--- a/nlp/api/doc/pom.xml
+++ b/nlp/api/doc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>0.9.2-SNAPSHOT</version>
+        <version>0.9.2</version>
     </parent>
 
     <artifactId>tock-nlp-api-doc</artifactId>
