--- a/bot/connector-slack/pom.xml
+++ b/bot/connector-slack/pom.xml
@@ -45,11 +45,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.nhaarman</groupId>
-            <artifactId>mockito-kotlin</artifactId>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- see https://github.com/mockito/mockito/issues/366 -->
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-codegen</artifactId>
