--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 
         <junit>4.12</junit>
         <mockito-kotlin>1.5.0</mockito-kotlin>
+        <mockk>1.7.10</mockk>
 
         <plugin.surefire>2.21.0</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
@@ -365,16 +366,10 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>com.nhaarman</groupId>
-                <artifactId>mockito-kotlin</artifactId>
-                <version>${mockito-kotlin}</version>
+                <groupId>io.mockk</groupId>
+                <artifactId>mockk</artifactId>
+                <version>${mockk}</version>
                 <scope>test</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-reflect</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.github.fakemongo</groupId>
