--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -41,6 +41,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-translator-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo-data</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
