--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,14 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.2.30</kotlin>
+        <kotlin>1.2.31</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
         <kotlin-logging>1.5.3</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.6.3</kmongo>
+        <kmongo>3.6.4-SNAPSHOT</kmongo>
         <fongo>2.2.0-RC1</fongo>
         <jackson>2.9.3</jackson>
         <jackson-module>2.9.3</jackson-module>
@@ -201,6 +201,11 @@
             <dependency>
                 <groupId>org.litote.kmongo</groupId>
                 <artifactId>kmongo</artifactId>
+                <version>${kmongo}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.litote.kmongo</groupId>
+                <artifactId>kmongo-data</artifactId>
                 <version>${kmongo}</version>
             </dependency>
             <dependency>
