--- a/bot/storage-mongo/pom.xml
+++ b/bot/storage-mongo/pom.xml
@@ -68,7 +68,7 @@
         </dependency>
         <dependency>
             <groupId>org.litote.kmongo</groupId>
-            <artifactId>kmongo-fongo</artifactId>
+            <artifactId>kmongo-flapdoodle</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
