resolves #224 Can't choose connector type while creating a new Bot configuration
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
 
         <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-shared</artifactId>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
             <scope>test</scope>
