#274 fixes bot configuration refresh
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-rest-client/pom.xml
+++ b/bot/connector-rest-client/pom.xml
@@ -53,6 +53,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
