allow xray test plan execution in admin interface

--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
+            <artifactId>kotlin-test-junit5</artifactId>
         </dependency>
     </dependencies>
 
