--- a/bot/test/pom.xml
+++ b/bot/test/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
+            <artifactId>kotlin-test-junit5</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
