improve travis build
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -52,7 +52,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install</arguments>
+              <arguments>install -d</arguments>
             </configuration>
           </execution>
           <execution>
