--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -52,7 +52,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install</arguments>
+              <arguments>install -d</arguments>
             </configuration>
           </execution>
           <execution>
